--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ flake8==6.1.0
 infi.systray==0.1.12
 isort==5.12.0
 keyboard==0.13.5
+packaging==23.2
 pyautogui==0.9.54
+pyinstaller==6.1.0
+pyinstaller_versionfile==2.1.1
 setuptools==75.1.0
